# atlassy

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  release-plz.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  release-build.yml  release-plz.yml
crates/atlassy-adf/: Cargo.toml
crates/atlassy-cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/atlassy-cli/src/: cli_args.rs  fixtures.rs  io.rs  lib.rs  main.rs  manifest.rs  provenance.rs  test_helpers.rs  tests.rs  types.rs
crates/atlassy-cli/src/batch/: kpi.rs  mod.rs  report.rs  safety.rs
crates/atlassy-cli/src/commands/: create_subpage.rs  mod.rs  run.rs  run_batch.rs  run_multi_page.rs  run_readiness.rs
crates/atlassy-cli/src/readiness/: decision_packet.rs  evidence.rs  gates.rs  mod.rs  runbooks.rs
crates/atlassy-cli/tests/: batch_report.rs  live_runtime_startup.rs  readiness.rs
crates/atlassy-cli/tests/common/: mod.rs
crates/atlassy-cli/tests/fixtures/: attestations_lifecycle_complete.json  batch_complete_manifest.json  batch_coverage_failure_manifest.json  batch_drift_failure_manifest.json  batch_incomplete_telemetry_manifest.json  batch_retry_breach_manifest.json  batch_unmatched_pair_manifest.json
crates/atlassy-confluence/: Cargo.toml
crates/atlassy-contracts/: Cargo.toml
crates/atlassy-mcp/: Cargo.toml
crates/atlassy-mcp/src/: main.rs
crates/atlassy-pipeline/: Cargo.toml
crates/atlassy-pipeline/src/: artifact_store.rs  error_map.rs  lib.rs  multi_page.rs  orchestrator.rs  state_tracker.rs  tests.rs  util.rs
crates/atlassy-pipeline/src/states/: adf_block_ops.rs  adf_table_edit.rs  classify.rs  extract_prose.rs  fetch.rs  locked_boundary.rs  md_assist_edit.rs  merge_candidates.rs  mod.rs  patch.rs  publish.rs  verify.rs
crates/atlassy-pipeline/tests/: multi_page_integration.rs  pipeline_integration.rs
crates/atlassy-pipeline/tests/fixtures/: README.md  empty_page_adf.json  mixed_routes_adf.json  multi_section_adf.json  page_adf.json  prose_only_adf.json  table_allowed_cell_update_adf.json  table_forbidden_ops_adf.json
ideas/: 2026-03-adf-markdown-dual-representation.md  2026-03-advanced-table-editing-modes.md  2026-03-confluence-adf-markdown-size-evidence.md  2026-03-confluence-subpage-creation-support.md  2026-03-empty-page-bootstrap-editing.md  2026-03-mcp-server-integration.md  2026-03-multi-page-orchestration-and-autonomous-conflict-resolution.md  2026-03-poc-test-dataset-design.md  2026-03-raw-adf-page-seeding.md  2026-03-route-classification-drift.md  2026-03-scope-resolution-quality.md  2026-03-structural-block-editing-support.md  2026-03-token-reduction-confluence-updates.md  README.md
openspec/: README.md  config.yaml
qa/: README.md  confluence-sandbox-test-plan.md
qa/investigations/: 2026-03-07-lifecycle-subpage-bootstrap-validation.md  2026-03-07-live-confluence-clean-validation.md  2026-03-07-live-confluence-failure.md  2026-03-07-live-confluence-fix-validation.md  2026-03-08-kpi-revalidation-v2.md  (+8 more)
roadmap/: 01-problem-points.md  02-solution-architecture.md  03-phased-roadmap.md  04-kpi-and-experiments.md  05-risks-and-mitigations.md  06-decisions-and-defaults.md  07-execution-readiness.md  08-poc-scope.md  09-ai-contract-spec.md  10-testing-strategy-and-simulation.md  11-live-runtime-execution-plan.md  12-page-lifecycle-expansion-plan.md  13-ci-and-automation.md  14-target-path-auto-discovery.md  15-code-quality-and-readability.md  README.md
scripts/: validate-commit-msg.sh
(+3647 files in other folders)
