[workspace]
members = [
  "crates/atlassy-cli",
  "crates/atlassy-pipeline",
  "crates/atlassy-adf",
  "crates/atlassy-confluence",
  "crates/atlassy-contracts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
thiserror = "2.0.12"
tempfile = "3.19.1"
