[package]
name = "atlassy-cli"
version.workspace = true
edition.workspace = true

[dependencies]
atlassy-confluence = { path = "../atlassy-confluence" }
atlassy-pipeline = { path = "../atlassy-pipeline" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
