[package]
name = "atlassy-cli"
version.workspace = true
edition.workspace = true

[dependencies]
atlassy-confluence = { path = "../atlassy-confluence", version = "0.1.0" }
atlassy-contracts = { path = "../atlassy-contracts", version = "0.1.0" }
atlassy-pipeline = { path = "../atlassy-pipeline", version = "0.1.0" }
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
