[package]
name = "atlassy-cli"
version.workspace = true
edition.workspace = true

[dependencies]
atlassy-confluence = { path = "../atlassy-confluence" }
atlassy-contracts = { path = "../atlassy-contracts" }
atlassy-pipeline = { path = "../atlassy-pipeline" }
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
