[package]
name = "atlassy-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
atlassy-adf = { path = "../atlassy-adf" }
atlassy-confluence = { path = "../atlassy-confluence" }
atlassy-contracts = { path = "../atlassy-contracts" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
