[package]
name = "atlassy-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
atlassy-adf = { path = "../atlassy-adf", version = "0.1.0" }
atlassy-confluence = { path = "../atlassy-confluence", version = "0.1.0" }
atlassy-contracts = { path = "../atlassy-contracts", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
